# rag

./: .gitignore  README.md  arxiv_fetcher.py  cli.py  config.py  config.yaml  document_parser.py  env.example  error_logging.py  log_analyzer.py  log_cleanup.py  logging_config.py  markdown_formatter.py  model_metrics.py  pyproject.toml  rag_engine.py  requirements.txt  setup.py  user_actions.py
.cursor/rules/: convensions.mdc  workflow.mdc
.propmpts/: architecture.md  build-tickets.md  convensions.md  requirements.md  run-tickets.md
.specification/: architecture.md  product.md  requirements.md
.tickets/: 001-project-structure.md  002-configuration-system.md  003-logging-system.md  004-arxiv-fetcher.md  005-document-parser.md  006-rag-engine.md  007-markdown-formatter.md  008-cli-interface.md  009-docker-setup.md  010-testing-framework.md  011-documentation.md  012-integration-testing.md  013-performance-optimization.md  014-final-validation.md
scripts/: README.md  demo.py  test_download.py  test_metadata.py  test_search.py  test_system.py
